item page created

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="content-wrapper">
+  <div class="content-wrapper"  id="content">
 
     <div class="header-wrapper">
       <div class="container">
@@ -23,7 +23,7 @@
             <span class="logo-text">Meniška.lt</span>
           </a>
           <ul class="navbar-list">
-            <li class="navbar-item"><a class="navbar-link" href="#">Prekės</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="./index.html">Prekės</a></li>
             <li class="navbar-item"><a class="navbar-link" href="#">Pridėti prėkę</a></li>
             <!-- <li class="navbar-item"><a class="navbar-link" href="#"></a></li> -->
           </ul>
@@ -44,6 +44,12 @@
       </div>
     </div>
 
+    <a class="arrow-link" href="#content">
+      <svg class="arrow" viewBox="0 0 96 96" xmlns="http://www.w3.org/2000/svg"><title/>
+        <path d="M82.6074,62.1072,52.6057,26.1052a6.2028,6.2028,0,0,0-9.2114,0L13.3926,62.1072a5.999,5.999,0,1,0,9.2114,7.6879L48,39.3246,73.396,69.7951a5.999,5.999,0,1,0,9.2114-7.6879Z"/>
+      </svg>
+    </a>
+
     <div class="footer-wrapper">
       <div class="container">
         <div class="footer">
@@ -52,6 +58,8 @@
       </div>
     </div>
   </div>
+
+  
 
   <script src="script.js"></script>
 </body>
