--- a/item.html
+++ b/item.html
@@ -8,7 +8,9 @@
   <title>Meniška.lt</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@600;700&family=Rubik:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@600;700&family=Rubik:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -36,12 +38,13 @@
       </div>
     </div>
 
-    <!-- <div class="menu-wrapper">
+    <div class="sculpture-wrapper">
       <div class="container">
-        <div class="menu-list">
+        <div class="sculpture-section">
+          <div class="sculpture"></div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <div class="footer-wrapper">
       <div class="container">
@@ -52,7 +55,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="script2.js"></script>
 </body>
 
 </html>
