add-item page added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </a>
           <ul class="navbar-list">
             <li class="navbar-item"><a class="navbar-link" href="./index.html">Prekės</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="#">Pridėti prėkę</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="./add-item.html">Pridėti prėkę</a></li>
             <!-- <li class="navbar-item"><a class="navbar-link" href="#"></a></li> -->
           </ul>
           <div class="hamburger-menu">
