--- a/item.html
+++ b/item.html
@@ -25,8 +25,8 @@
             <span class="logo-text">Meniška.lt</span>
           </a>
           <ul class="navbar-list">
-            <li class="navbar-item"><a class="navbar-link" href="#">Prekės</a></li>
-            <li class="navbar-item"><a class="navbar-link" href="#">Pridėti prėkę</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="./index.html">Prekės</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="./add-item.html">Pridėti prėkę</a></li>
             <!-- <li class="navbar-item"><a class="navbar-link" href="#"></a></li> -->
           </ul>
           <div class="hamburger-menu">
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <div class="sculpture-wrapper">
+    <div class="section-wrapper">
       <div class="container">
         <div class="sculpture-section">
           <div class="sculpture"></div>
