--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
           <ul class="navbar-list">
             <li class="navbar-item"><a class="navbar-link" href="./index.html">Prekės</a></li>
             <li class="navbar-item"><a class="navbar-link" href="./add-item.html">Pridėti prėkę</a></li>
-            <!-- <li class="navbar-item"><a class="navbar-link" href="#"></a></li> -->
           </ul>
           <div class="hamburger-menu">
             <span class="hamburger-menu-line"></span>
@@ -38,9 +37,7 @@
 
     <div class="menu-wrapper">
       <div class="container">
-        <div class="menu-list">
-          <!-- kurti itemus su js -->
-        </div>
+        <div class="menu-list"></div>
       </div>
     </div>
 
